--- a/index.html
+++ b/index.html
@@ -1,186 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Shower Presentation Engine</title>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-16x10.css">
+    <title>Backbone & Marionette</title>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-16x10.css">
 </head>
 <body class="shower list">
-	<header class="caption">
-		<h1>Shower Presentation Engine</h1>
-		<p>Yours Truly, Famous Inc.</p>
-	</header>
-	<section class="slide" id="cover">
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-		<img src="pictures/cover.jpg" alt="" class="cover">
-		<!--
-			To apply styles to the certain slides
-			set slide ID to get needed elements
-			-->
-		<style>
-			#cover h2 {
-				margin:30px 0 0;
-				color:#FFF;
-				text-align:center;
-				font-size:70px;
-				}
-			#cover p {
-				margin:10px 0 0;
-				text-align:center;
-				color:#FFF;
-				font-style:italic;
-				font-size:20px;
-				}
-				#cover p a {
-					color:#FFF;
-					}
-		</style>
-	</section>
-	<section class="slide">
-		<h2>Shower key features</h2>
-		<ol>
-			<li>Built on HTML, CSS and vanilla JavaScript</li>
-			<li>Works in all modern browsers</li>
-			<li>Themes are separated from engine</li>
-			<li>Modular and extensible</li>
-			<li>Fully keyboard accessible</li>
-			<li>Printable to PDF</li>
-		</ol>
-		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
-	</section>
-	<section class="slide">
-		<h2>Plain text on your slides</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
-	</section>
-	<section class="slide">
-		<h2>Two columns if you like</h2>
-		<p class="double">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-	</section>
-	<section class="slide">
-		<h2>All kind of lists</h2>
-		<ol>
-			<li>Simple lists are marked with bullets</li>
-			<li>Ordered lists begin with a number</li>
-			<li>You can even nest lists one inside another
-				<ul>
-					<li>Or mix their types</li>
-					<li>But do not go too far</li>
-					<li>Otherwise audience will be bored</li>
-				</ul>
-			</li>
-			<li>Look, seven rows exactly!</li>
-		</ol>
-	</section>
-	<section class="slide">
-		<h2>Serious citations</h2>
-		<figure>
-			<blockquote>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
-			</blockquote>
-			<figcaption>Marcus Tullius Cicero</figcaption>
-		</figure>
-	</section>
-	<section class="slide">
-		<h2>Code samples</h2>
-		<pre>
-			<code>&lt;!DOCTYPE html&gt;</code>
-			<code class="mark">&lt;html lang="en"&gt;</code>
-			<code><mark>&lt;head&gt;</mark> <span class="comment">&lt;!--Comment--&gt;</span></code>
-			<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-			<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-			<code>    &lt;link rel="stylesheet" href="screen.css"&gt;</code>
-			<code><mark>&lt;/head&gt;</mark></code>
-		</pre>
-	</section>
-	<section class="slide">
-		<h2>Even tables</h2>
-		<table>
-		<tr>
-			<th scope="col">Locavore</th>
-			<th>Umami</th>
-			<th>Helvetica</th>
-			<th>Vegan</th>
-		</tr>
-		<tr>
-			<th scope="row">Fingerstache</th>
-			<td>Kale</td>
-			<td>Chips</td>
-			<td>Keytar</td>
-		</tr>
-		<tr>
-			<th scope="row">Sriracha</th>
-			<td>Gluten-free</td>
-			<td>Ennui</td>
-			<td>Keffiyeh</td>
-		</tr>
-		<tr>
-			<th scope="row">Thundercats</th>
-			<td>Jean</td>
-			<td>Shorts</td>
-			<td>Biodiesel</td>
-		</tr>
-		<tr>
-			<th scope="row">Terry</th>
-			<td>Richardson</td>
-			<td>Swag</td>
-			<td>Blog</td>
-		</tr>
-		</table>
-		<p>It’s good to have information organized.</p>
-	</section>
-	<section class="slide" id="picture">
-		<h2>Pictures</h2>
-		<img src="pictures/picture.jpg" alt="" class="cover">
-		<style>
-			#picture h2 {
-				color:#FFF;
-				}
-		</style>
-	</section>
-	<section class="slide">
-		<h2 class="shout shrink">You can even shout this way</h2>
-	</section>
-	<section class="slide">
-		<h2>Inner navigation</h2>
-		<ol>
-			<li>Lets you reveal list items one by one</li>
-			<li class="next">To keep some key points</li>
-			<li class="next">In secret from audience</li>
-			<li class="next">But it will work only once</li>
-			<li class="next">Nobody wants to see the same joke twice</li>
-		</ol>
-	</section>
-	<section class="slide grid">
-		<h2>All nicely aligned to grid</h2>
-	</section>
-	<section class="slide" id="see-more">
-		<h2 class="shout">
-			<img src="pictures/logo.svg" alt="Shower logo">
-			<a href="https://github.com/shower/shower">See more on GitHub</a>
-		</h2>
-		<style>
-			#see-more h2 {
-				font-size:100px
-				}
-			#see-more img {
-				width:0.72em;
-				height:0.72em;
-				}
-		</style>
-	</section>
-	<p class="badge">
-		<a href="https://github.com/shower/shower">Fork me on GitHub</a>
-	</p>
-	<!--
-		To hide progress bar from entire presentation
-		just remove “progress” element.
-		-->
-	<div class="progress"></div>
-	<script src="node_modules/shower-core/shower.min.js"></script>
-	<!-- Copyright © 2015 Yours Truly, Famous Inc. -->
-	<!-- Photos by John Carey, fiftyfootshadows.net -->
+    <header class="caption">
+        <h1>backbonejs & marionettejs</h1>
+        <p>Marionette simplifies your Backbone application code with robust views and architecture solutions.</p>
+    </header>
+    <section class="slide" id="cover">
+        <h2 style="text-align: center; ">Marionette&Backbone</h2>
+        <img src="docs/img/Marrionette_backbone.png" alt="" class="cover">
+
+        <!--
+            To apply styles to the certain slides
+            set slide ID to get needed elements
+            -->
+        <style>
+            #cover h2 {
+                margin:30px 0 0;
+                color: #2c2c2c;
+                text-align:center;
+                font-size:70px;
+                }
+            #cover p {
+                margin:10px 0 0;
+                text-align:center;
+                color: #2c2c2c;
+                font-style:italic;
+                font-size:20px;
+                }
+                #cover p a {
+                    color:#FFF;
+                    }
+        </style>
+    </section>
+
+    <section class="slide">
+        <h2>Backbone.js</h2>
+        <ul>
+            <li>Model-View-Presenter (MVP)</li>
+            <li>Предназначена для разработки веб-приложений с поддержкой RESTful JSON интерфейса</li>
+            <li>Из коробки: Collection, Model, View</li>
+            <li>Единственная жесткая зависимость в Backbone — Underscore.js </li>
+            <li>Операций с DOM: jQuery ( > 1.7.0) либо Zepto</li>
+            <li>создан Джереми Ашкенасом, который известен также как создатель CoffeeScript.</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <h2>Backbone.js + </h2>
+        <ul>
+            <li>Гибки/простой</li>
+            <li>Хорошая событийная модель</li>
+            <li>Отличная реализация Model/Collection для REST </li>
+            <li>не Angular.JS)</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <h2>Backbone.js - </h2>
+        <ul>
+            <li>Нет основного класса приложения</li>
+            <li>Нет поддержки модулей из коробки</li>
+            <li>Нет поддержки слоев (header/footer/sidebar/content/etc..)</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <h2>Marionettejs.js - 2.4.7 | 3.0.0 - beta.2</h2>
+
+        <ul style="
+            display: inline-block;
+            vertical-align: top;
+            ">
+            <li>Marionette.Application</li>
+            <li>Marionette.AppRouter</li>
+            <li>Marionette.functions</li>
+            <li>
+                Radio - Wreqr.radio
+                <ul>
+                    <li>Event Aggregator</li>
+                    <li>Request Response</li>
+                    <li>Commands</li>
+                </ul>
+            </li>
+        </ul>
+        <ul style="
+            display: inline-block;
+            padding-left: 100px;
+            ">
+            <li>Layouts</li>
+            <ul>
+                <li>Marionette.LayoutView</li>
+                <li>Marionette.Region</li>
+                <li>Marionette.RegionManager</li>
+                <li>Marionette.CollectionView</li>
+                <li>Marionette.CompositeView</li>
+                <li>Marionette.ItemView</li>
+            </ul>
+        </ul>
+    </section>
+
+    <section class="slide" id="picture-process">
+        <h2>Рабочий процесс</h2>
+        <img src="docs/img/Backbone_Diagram.png" alt="" class="cover">
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide" id="app-router">
+        <h2>Controller - router</h2>
+        <div>
+            <pre>
+                <code>controller = require('./controller');</code>
+                <code>Router = Marionette.AppRouter.extend({</code>
+                <code>  appRoutes: {</code>
+                <code>    "": "start",</code>
+                <code>    "item/": "routeItemList",</code>
+                <code>    "item/:id": "routeItem",</code>
+                <code>  },</code>
+                <code>  controller: controller</code>
+                <code>});</code>
+            </pre>
+        </div>
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide" id="views-example">
+        <h2 style="margin-bottom: 10px;">
+            Views
+        </h2>
+        <img style="top: 62%;" src="docs/img/views_example.jpg" alt="" class="cover">
+
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide" id="region-example">
+        <h2 style="margin-bottom: 10px;">
+            Showing a view in a region
+        </h2>
+        <img style="top: 62%;" src="docs/img/region_example.jpg" alt="" class="cover">
+
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide" id="app-regions">
+        <h2>Showing a view in a region</h2>
+        <div>
+            <pre>
+                <code>var myView = new MyView();</code>
+                <code>// Show the first view.</code>
+                <code>App.mainRegion.show(myView);</code>
+                <code>App.mainRegion.close();</code>
+                <code>// Replace the view with another</code>
+                <code>var anotherView = new AnotherView();</code>
+                <code>App.mainRegion.show(myView);</code>
+            </pre>
+        </div>
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide" id="picture-chart">
+        <h2 style="margin-bottom: 10px;">
+            Pull request backlog
+        </h2>
+        <div style="font-size: 18px;">
+            http://ghtorrent.org/pullreq-perf/marionettejs-backbone.marionette/
+        </div>
+        <img style="width: 500px; top: 64%;" src="docs/img/marionettejschart-1.png" alt="" class="cover">
+
+        <style>
+            #picture h2 {
+                color:#FFF;
+            }
+        </style>
+    </section>
+
+    <section class="slide">
+        <h2>Будущее</h2>
+        <ol>
+            <li>v3.0.0</li>
+            <li class="next">views replacing region element</li>
+            <li class="next">improved router</li>
+            <li class="next">Application lifecycle</li>
+        </ol>
+    </section>
+
+    <section class="slide">
+        <h2>underscorejs 1.8.3</h2>
+        <p>underscorejs — это невероятно удобная JavaScript-библиотека, этакий швейцарский нож для js-разработчика, набор функций-утилит, которые так привычны любителям Prototype.js (или Ruby). Однако в отличие от Prototype.js, underscore не модифицирует прототипы встроенных объектов JavaScript. Данная особенность гарантирует бесконфликтность, что позволяет замечательно сочетать этот инструмент с, например, jQuery или Backbone, или и тем и другим вместе.</p>
+    </section>
+    <section class="slide">
+        <h2>lodash v4.13.1</h2>
+        <p>
+            Новые возможности:
+        </p>
+        <ul>
+            <li>_.deepClone поддерживает “глубокое” клонирование</li>
+            <li>_.forOwn для итерирования только по собственным свойствам объекта</li>
+            <li>_.merge — “глубокий” аналог _.extend</li>
+            <li>_.pick и _.omit принимают аргументы callback и thisArg</li>
+            <li>Индивидуальные сборки</li>
+            <li>...</li>
+        </ul>
+    </section>
+
+    <section class="slide">
+        <h2 class="shout shrink">Вопросы?</h2>
+    </section>
+    <section class="slide">
+        <h2>Inner navigation</h2>
+        <ol>
+            <li>Lets you reveal list items one by one</li>
+            <li class="next">To keep some key points</li>
+            <li class="next">In secret from audience</li>
+            <li class="next">But it will work only once</li>
+            <li class="next">Nobody wants to see the same joke twice</li>
+        </ol>
+    </section>
+    <section class="slide grid">
+        <h2>All nicely aligned to grid</h2>
+    </section>
+
+    <p class="badge">
+        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
+    </p>
+    <!--
+        To hide progress bar from entire presentation
+        just remove “progress” element.
+        -->
+    <div class="progress"></div>
+    <script src="node_modules/shower-core/shower.min.js"></script>
+    <!-- Copyright © 2015 Yours Truly, Famous Inc. -->
+    <!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
 </html>
