--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-16x10.css">
+    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-4x3.css">
 </head>
 <body class="shower list">
     <header class="caption">
@@ -175,7 +175,7 @@
     </section>
 
     <section class="slide" id="region-example">
-        <h2 style="margin-bottom: 10px;">
+        <h2 style="margin-bottom: 10px; color: #fff;">
             region - представление
         </h2>
         <img style="top: 62%;" src="docs/img/region_example.jpg" alt="" class="cover">
@@ -261,7 +261,7 @@
     </section>
 
     <section class="slide">
-        <h2 class="shout shrink">Вопросы?</h2>
+        <div class="shout shrink">Спасибо за внимание!</div>
     </section>
 
     <p class="badge">
