--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/screen-4x3.css">
+    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-4x3.css">
 </head>
 <body class="shower list">
     <header class="caption">
@@ -175,7 +175,7 @@
     </section>
 
     <section class="slide" id="region-example">
-        <h2 style="margin-bottom: 10px; color: #fff;">
+        <h2 style="margin-bottom: 10px;">
             region - представление
         </h2>
         <img style="top: 62%;" src="docs/img/region_example.jpg" alt="" class="cover">
@@ -235,9 +235,9 @@
         <h2>Будущее</h2>
         <ol>
             <li>v3.0.0</li>
-            <li class="next">views replacing region element</li>
-            <li class="next">improved router</li>
+            <li class="next">Улучшение router</li>
             <li class="next">Application lifecycle</li>
+            <li class="next">ES6 - modules</li>
         </ol>
     </section>
 
@@ -261,7 +261,7 @@
     </section>
 
     <section class="slide">
-        <div class="shout shrink">Спасибо за внимание!</div>
+        <h2 class="shout shrink">Спасибо за внимание!</h2>
     </section>
 
     <p class="badge">
