--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-4x3.css">
+    <link rel="stylesheet" href="node_modules/shower-ribbon/styles/screen-16x10.css">
 </head>
 <body class="shower list">
     <header class="caption">
@@ -122,7 +122,7 @@
 
     <section class="slide" id="picture-process">
         <h2>Рабочий процесс</h2>
-        <img src="docs/img/Backbone_Diagram.png" alt="" class="cover">
+        <img style="top: 64%;" src="docs/img/Backbone_Diagram.png" alt="" class="cover">
         <style>
             #picture h2 {
                 color:#FFF;
@@ -237,7 +237,7 @@
             <li>v3.0.0</li>
             <li class="next">Улучшение router</li>
             <li class="next">Application lifecycle</li>
-            <li class="next">ES6 - modules</li>
+            <li class="next">ES6 - модули</li>
         </ol>
     </section>
 
@@ -261,7 +261,7 @@
     </section>
 
     <section class="slide">
-        <h2 class="shout shrink">Спасибо за внимание!</h2>
+        <h2 class="shout shrink" style="font-size: 90px;">Спасибо за внимание!</h2>
     </section>
 
     <p class="badge">
